edited some visualization graphs

--- a/AI/running_chatgpt.ipynb
+++ b/AI/running_chatgpt.ipynb
@@ -270,6 +270,10 @@
       "Bad pipe message: %s [b'live\\r\\nAccess-Control-Request-Method: GET\\r\\nAc', b'ss-Control-Request-Private-Network: true\\r\\nOrigin: https://api-6b447a0c.duosecurity.com\\r\\nUser-Agent', b'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebK']\n",
       "Bad pipe message: %s [b'ep-alive\\r\\nsec-ch-ua: \"Google Chrome\";v=\"123\", \"Not:A-Brand\";v=\"8\", \"Chromium\";v=\"123\"\\r\\nAccept: text/plain,', b'/*; q=0.01\\r\\nsec-ch-ua-mobile: ?']\n",
       "Bad pipe message: %s [b'/537.36 (KHTML, like Gecko) Chrome/123.0.0.0 Safari/537.36\\r\\nSec-Fetch-Mode: cors\\r\\nSec-Fetch-Site: cross-']\n",
+      "Bad pipe message: %s [b'\\nUser-Agent: Mozilla/5.0 (Macintosh; Intel Mac ', b' X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/123.0.0.0 Safari/537', b'6\\r\\nsec-ch-ua-platform: \"macOS\"\\r\\nOrigin: https', b'/api-6b447a0c.duosecurity.com\\r\\nSec-Fetch-Site: cross-site', b'Sec-Fetch-Mo']\n",
+      "Bad pipe message: %s [b'live\\r\\nAccess-Control-Request-Method: GET\\r\\nAc', b'ss-Control-Request-Private-Network: true\\r\\nOrigin: https://api-6b447a0c.duosecurity.com\\r\\nUser-Agent', b'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebK']\n",
+      "Bad pipe message: %s [b'ep-alive\\r\\nsec-ch-ua: \"Google Chrome\";v=\"123\", \"Not:A-Brand\";v=\"8\", \"Chromium\";v=\"123\"\\r\\nAccept: text/plain,', b'/*; q=0.01\\r\\nsec-ch-ua-mobile: ?']\n",
+      "Bad pipe message: %s [b'/537.36 (KHTML, like Gecko) Chrome/123.0.0.0 Safari/537.36\\r\\nSec-Fetch-Mode: cors\\r\\nSec-Fetch-Site: cross-']\n",
       "Bad pipe message: %s [b'\\nUser-Agent: Mozilla/5.0 (Macintosh; Intel Mac ', b' X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/123.0.0.0 Safari/537', b'6\\r\\nsec-ch-ua-platform: \"macOS\"\\r\\nOrigin: https', b'/api-6b447a0c.duosecurity.com\\r\\nSec-Fetch-Site: cross-site', b'Sec-Fetch-Mo']\n"
      ]
     }
