prepping for gpt-4

--- a/AI/running_chatgpt-3.ipynb
+++ b/AI/running_chatgpt-3.ipynb
@@ -279,9 +279,9 @@
     }
    ],
    "source": [
-    "props = [eval(x) if type(x) == str else x for x in list(pd.read_csv('progress.csv')['props'])]\n",
+    "props = [eval(x) if type(x) == str else x for x in list(pd.read_csv('progress-3.csv')['props'])]\n",
     "#problematic_rows = [i for i in range(len(props)) if type(props[i]) != tuple and np.isnan(props[i])]\n",
-    "for index, row in reddit_df.iloc[len(props):300,:].iterrows():\n",
+    "for index, row in reddit_df.iloc[600+len(props):900,:].iterrows():\n",
     "    if index % 50 == 0:\n",
     "        print(f\"Scraped {index}\")\n",
     "    try:\n",
@@ -289,7 +289,7 @@
     "    except:\n",
     "        #problematic_rows.append(index)\n",
     "        props.append(np.NaN)\n",
-    "    pd.DataFrame({'props': props}).to_csv('progress.csv')\n",
+    "    pd.DataFrame({'props': props}).to_csv('progress-3.csv')\n",
     "    # if index > 5 and all(problematic_rows[-5:] == np.arange(index-4,index+1)):\n",
     "    #        break\n",
     "print(f\"Scraped {len(reddit_df)}; Finished\")\n",
