--- a/AI/running_chatgpt-4.ipynb
+++ b/AI/running_chatgpt-4.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "3d3221cc-0702-48ae-a0af-d0c290c8efc7",
+   "execution_count": 1,
+   "id": "8a968334-f64d-41ad-bcc8-471af9963408",
    "metadata": {},
    "outputs": [
     {
@@ -40,8 +40,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "58e26855-6c39-492c-a89b-1e42926d2a92",
+   "execution_count": 2,
+   "id": "5afcaea3-022d-43da-a0e2-2f59aac4cd21",
    "metadata": {},
    "outputs": [
     {
@@ -75,9 +75,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0e5cd93a-8f7e-4d24-860c-fc40400e153a",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Cleaning Text"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "6ce077a5-ebf1-45d3-b134-a03406c11573",
+   "execution_count": 3,
+   "id": "4d0006ca-7663-4be7-945f-e92e620f4ee0",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +96,7 @@
        "'Dear Falcons fans: are you guys ready for 17 straight weeks of hearing how you fucked up the Super Bowl? I feel your pain. Sincerely, Seahawks fans everywhere.'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,8 +129,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "3c5f2211-df46-4b1d-bcd8-aace92bac7f6",
+   "execution_count": 4,
+   "id": "4e38f69c-8b6f-4ad2-9ad2-f8aeaefb3e19",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +139,7 @@
        "'Dear Falcons fans are you guys ready for 17 straight weeks of hearing how you fucked up the Super Bowl I feel your pain Sincerely Seahawks fans everywhere'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,8 +151,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "9327908b-1df2-4213-8c36-2dc256a35845",
+   "execution_count": 5,
+   "id": "4c070f9a-f7ac-464d-a47e-39dda36574fe",
    "metadata": {},
    "outputs": [
     {
@@ -167,8 +177,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "2de27866-5eea-4b4b-bfaf-ce5fffef6cbe",
+   "execution_count": 6,
+   "id": "f9cdcc3f-a51a-45f4-bc8d-74c0e93bd778",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,9 +190,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7734e53f-ea78-4412-a212-09095197e9ec",
+   "metadata": {},
+   "source": [
+    "# Using ChatGPT"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "7a3e92b6-c749-49bb-8f6f-eb796745ccea",
+   "execution_count": 7,
+   "id": "b341a2a9-1003-4175-81a9-8acaacd3155f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +216,7 @@
     "@retry(wait=wait_random_exponential(min=1, max=61), stop=stop_after_attempt(7))\n",
     "def sentiment_analysis(transcription):\n",
     "    response = client.chat.completions.create(\n",
-    "        model=\"gpt-3.5-turbo-0125\",\n",
+    "        model=\"gpt-4\",\n",
     "        temperature=0,\n",
     "        messages=[\n",
     "            {\n",
@@ -230,110 +248,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "32210f08-58e5-4b7e-9625-6821dcec9610",
+   "execution_count": 8,
+   "id": "b4b9264d-3885-4aa7-a770-35a634423139",
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = client.chat.completions.create(\n",
-    "        model=\"gpt-3.5-turbo-0125\",\n",
-    "        temperature=0,\n",
-    "        messages=[\n",
-    "            {\n",
-    "                \"role\": \"system\",\n",
-    "                \"content\": \"As an AI with expertise in language and emotion analysis, your task is to analyze the sentiment of the following comment. This comment was posted on the r/nfl subreddit after a regular season NFL match. Please consider the overall tone of the discussion, the emotion conveyed by the language used, and the context in which words and phrases are used. Use one word to indicate whether the sentiment is generally positive, negative, or neutral. Be careful about sarcastic comments, indicating neutral if you are unsure about the sentiment in a comment.\"\n",
-    "            },\n",
-    "            {\n",
-    "                \"role\": \"user\",\n",
-    "                \"content\": clean_text(reddit_df['all comments'][0][1][0])\n",
-    "            }\n",
-    "        ],\n",
-    "        max_tokens=1\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "2d6e7a83-deea-44fd-a36f-330955778291",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ChatCompletion(id='chatcmpl-97z3bfVaOKHxfXaZfD1GQCJ88WnDP', choices=[Choice(finish_reason='length', index=0, logprobs=None, message=ChatCompletionMessage(content='Negative', role='assistant', function_call=None, tool_calls=None))], created=1711690027, model='gpt-3.5-turbo-0125', object='chat.completion', system_fingerprint='fp_3bc1b5746c', usage=CompletionUsage(completion_tokens=1, prompt_tokens=139, total_tokens=140))"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "fc4611f5-dea8-411d-9c6f-9bfeb3ceafad",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sentiment_analysis(clean_text(reddit_df['all comments'][0][0][0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "422ecf6d-5a4c-4fa1-ab57-78a76eb8fc07",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "99"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.max(pd.read_csv('progress_2.csv').iloc[:,0])#['props']\n",
-    "#reddit_df['all comments'][0][0][0]"
+    "# alpha = list_analyser(reddit_df['all comments'][0])\n",
+    "# alpha[:5]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e1aacc2-616c-4ea5-8415-47ea1accfa7f",
+   "id": "8ef9fdf7-a011-47b1-80a3-406dd39cff97",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Scraped 100\n"
+      "Bad pipe message: %s [b'live\\r\\nAccess-Control-Request-Method: GET\\r\\nAc', b'ss-Control-Request-Private-Network: true\\r\\nOrigin: https://api-6b447a0c.duosecurity.com\\r\\nUser-Agent', b'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebK']\n",
+      "Bad pipe message: %s [b'ep-alive\\r\\nsec-ch-ua: \"Google Chrome\";v=\"123\", \"Not:A-Brand\";v=\"8\", \"Chromium\";v=\"123\"\\r\\nAccept: text/plain,', b'/*; q=0.01\\r\\nsec-ch-ua-mobile: ?']\n",
+      "Bad pipe message: %s [b'/537.36 (KHTML, like Gecko) Chrome/123.0.0.0 Safari/537.36\\r\\nSec-Fetch-Mode: cors\\r\\nSec-Fetch-Site: cross-']\n",
+      "Bad pipe message: %s [b'\\nUser-Agent: Mozilla/5.0 (Macintosh; Intel Mac ', b' X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/123.0.0.0 Safari/537', b'6\\r\\nsec-ch-ua-platform: \"macOS\"\\r\\nOrigin: https', b'/api-6b447a0c.duosecurity.com\\r\\nSec-Fetch-Site: cross-site', b'Sec-Fetch-Mo']\n",
+      "Bad pipe message: %s [b'live\\r\\nAccess-Control-Request-Method: GET\\r\\nAc', b'ss-Control-Request-Private-Network: true\\r\\nOrigin: https://api-6b447a0c.duosecurity.com\\r\\nUser-Agent', b'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebK']\n",
+      "Bad pipe message: %s [b'ep-alive\\r\\nsec-ch-ua: \"Google Chrome\";v=\"123\", \"Not:A-Brand\";v=\"8\", \"Chromium\";v=\"123\"\\r\\nAccept: text/plain,', b'/*; q=0.01\\r\\nsec-ch-ua-mobile: ?']\n",
+      "Bad pipe message: %s [b'/537.36 (KHTML, like Gecko) Chrome/123.0.0.0 Safari/537.36\\r\\nSec-Fetch-Mode: cors\\r\\nSec-Fetch-Site: cross-']\n",
+      "Bad pipe message: %s [b'\\nUser-Agent: Mozilla/5.0 (Macintosh; Intel Mac ', b' X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/123.0.0.0 Safari/537', b'6\\r\\nsec-ch-ua-platform: \"macOS\"\\r\\nOrigin: https', b'/api-6b447a0c.duosecurity.com\\r\\nSec-Fetch-Site: cross-site', b'Sec-Fetch-Mo']\n"
      ]
     }
    ],
    "source": [
-    "props = [eval(x) if type(x) == str else x for x in list(pd.read_csv('progress_2.csv')['props'])]\n",
+    "props = [eval(x) if type(x) == str else x for x in list(pd.read_csv('progress-4.csv')['props'])]\n",
     "#problematic_rows = [i for i in range(len(props)) if type(props[i]) != tuple and np.isnan(props[i])]\n",
-    "for index, row in reddit_df[np.max(pd.read_csv('progress_2.csv').iloc[:,0]):].iterrows():\n",
+    "for index, row in reddit_df.iloc[900+len(props):1200,:].iterrows():\n",
     "    if index % 50 == 0:\n",
     "        print(f\"Scraped {index}\")\n",
     "    try:\n",
@@ -341,7 +289,7 @@
     "    except:\n",
     "        #problematic_rows.append(index)\n",
     "        props.append(np.NaN)\n",
-    "    pd.DataFrame({'props': props}).to_csv('progress_2.csv')\n",
+    "    pd.DataFrame({'props': props}).to_csv('progress-4.csv')\n",
     "    # if index > 5 and all(problematic_rows[-5:] == np.arange(index-4,index+1)):\n",
     "    #        break\n",
     "print(f\"Scraped {len(reddit_df)}; Finished\")\n",
@@ -350,8 +298,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "c9726b7a-ef2f-4e30-bf27-b026995cebbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'props' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m props\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'props' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "props"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "146d4fe5-4b04-4157-ad72-e51a75dfe38f",
+   "id": "ac2e2e8e-4937-4d3b-a521-7ed09325cec8",
    "metadata": {},
    "outputs": [],
    "source": []
