making more viz graphs

--- a/AI/running_chatgpt.ipynb
+++ b/AI/running_chatgpt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8a968334-f64d-41ad-bcc8-471af9963408",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5afcaea3-022d-43da-a0e2-2f59aac4cd21",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "4d0006ca-7663-4be7-945f-e92e620f4ee0",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
        "'Dear Falcons fans: are you guys ready for 17 straight weeks of hearing how you fucked up the Super Bowl? I feel your pain. Sincerely, Seahawks fans everywhere.'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "4e38f69c-8b6f-4ad2-9ad2-f8aeaefb3e19",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
        "'Dear Falcons fans are you guys ready for 17 straight weeks of hearing how you fucked up the Super Bowl I feel your pain Sincerely Seahawks fans everywhere'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "4c070f9a-f7ac-464d-a47e-39dda36574fe",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "f9cdcc3f-a51a-45f4-bc8d-74c0e93bd778",
    "metadata": {},
    "outputs": [],
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "b341a2a9-1003-4175-81a9-8acaacd3155f",
    "metadata": {},
    "outputs": [],
@@ -216,7 +216,7 @@
     "@retry(wait=wait_random_exponential(min=1, max=61), stop=stop_after_attempt(7))\n",
     "def sentiment_analysis(transcription):\n",
     "    response = client.chat.completions.create(\n",
-    "        model=\"gpt-4\",\n",
+    "        model=\"gpt-3.5-turbo\",\n",
     "        temperature=0,\n",
     "        messages=[\n",
     "            {\n",
@@ -225,14 +225,14 @@
     "            },\n",
     "            {\n",
     "                \"role\": \"user\",\n",
-    "                \"content\": transcription\n",
+    "                \"content\": clean_text(transcription)\n",
     "            }\n",
     "        ],\n",
     "        max_tokens=1\n",
     "    )\n",
-    "    if response.choices[0].message.content == \"Positive\":\n",
+    "    if response.choices[0].message.content.lower() == \"positive\":\n",
     "        return 1\n",
-    "    elif response.choices[0].message.content == \"Negative\":\n",
+    "    elif response.choices[0].message.content.lower() == \"negative\":\n",
     "        return -1\n",
     "    else:\n",
     "        return 0\n",
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "b4b9264d-3885-4aa7-a770-35a634423139",
    "metadata": {},
    "outputs": [],
@@ -264,32 +264,36 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bad pipe message: %s [b'live\\r\\nAccess-Control-Request-Method: GET\\r\\nAc', b'ss-Control-Request-Private-Network: true\\r\\nOrigin: https://api-6b447a0c.duosecurity.com\\r\\nUser-Agent', b'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebK']\n",
-      "Bad pipe message: %s [b'ep-alive\\r\\nsec-ch-ua: \"Google Chrome\";v=\"123\", \"Not:A-Brand\";v=\"8\", \"Chromium\";v=\"123\"\\r\\nAccept: text/plain,', b'/*; q=0.01\\r\\nsec-ch-ua-mobile: ?']\n",
-      "Bad pipe message: %s [b'/537.36 (KHTML, like Gecko) Chrome/123.0.0.0 Safari/537.36\\r\\nSec-Fetch-Mode: cors\\r\\nSec-Fetch-Site: cross-']\n",
-      "Bad pipe message: %s [b'\\nUser-Agent: Mozilla/5.0 (Macintosh; Intel Mac ', b' X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/123.0.0.0 Safari/537', b'6\\r\\nsec-ch-ua-platform: \"macOS\"\\r\\nOrigin: https', b'/api-6b447a0c.duosecurity.com\\r\\nSec-Fetch-Site: cross-site', b'Sec-Fetch-Mo']\n",
-      "Bad pipe message: %s [b'live\\r\\nAccess-Control-Request-Method: GET\\r\\nAc', b'ss-Control-Request-Private-Network: true\\r\\nOrigin: https://api-6b447a0c.duosecurity.com\\r\\nUser-Agent', b'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebK']\n",
-      "Bad pipe message: %s [b'ep-alive\\r\\nsec-ch-ua: \"Google Chrome\";v=\"123\", \"Not:A-Brand\";v=\"8\", \"Chromium\";v=\"123\"\\r\\nAccept: text/plain,', b'/*; q=0.01\\r\\nsec-ch-ua-mobile: ?']\n",
-      "Bad pipe message: %s [b'/537.36 (KHTML, like Gecko) Chrome/123.0.0.0 Safari/537.36\\r\\nSec-Fetch-Mode: cors\\r\\nSec-Fetch-Site: cross-']\n",
-      "Bad pipe message: %s [b'\\nUser-Agent: Mozilla/5.0 (Macintosh; Intel Mac ', b' X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/123.0.0.0 Safari/537', b'6\\r\\nsec-ch-ua-platform: \"macOS\"\\r\\nOrigin: https', b'/api-6b447a0c.duosecurity.com\\r\\nSec-Fetch-Site: cross-site', b'Sec-Fetch-Mo']\n"
+      "Scraped 0\n",
+      "Scraped 50\n",
+      "Scraped 100\n",
+      "Scraped 150\n",
+      "Scraped 200\n",
+      "Scraped 250\n",
+      "Scraped 300\n",
+      "Scraped 350\n",
+      "Scraped 400\n",
+      "Scraped 450\n",
+      "Scraped 500\n",
+      "Scraped 550\n"
      ]
     }
    ],
    "source": [
-    "props = [eval(x) if type(x) == str else x for x in list(pd.read_csv('progress.csv')['props'])]\n",
+    "lists = [eval(x) if type(x) == str else x for x in list(pd.read_csv('progress.csv')['props'])]\n",
     "#problematic_rows = [i for i in range(len(props)) if type(props[i]) != tuple and np.isnan(props[i])]\n",
-    "for index, row in reddit_df.iloc[len(props):300,:].iterrows():\n",
+    "for index, row in reddit_df.iloc[len(lists):,:].iterrows():\n",
     "    if index % 50 == 0:\n",
     "        print(f\"Scraped {index}\")\n",
     "    try:\n",
-    "        props.append(prop_calculator(list_analyser(row['all comments'])))\n",
+    "        lists.append(list_analyser(row['all comments']))\n",
     "    except:\n",
     "        #problematic_rows.append(index)\n",
-    "        props.append(np.NaN)\n",
-    "    pd.DataFrame({'props': props}).to_csv('progress.csv')\n",
+    "        lists.append(np.NaN)\n",
+    "    pd.DataFrame({'lists': lists}).to_csv('progress.csv')\n",
     "    # if index > 5 and all(problematic_rows[-5:] == np.arange(index-4,index+1)):\n",
     "    #        break\n",
     "print(f\"Scraped {len(reddit_df)}; Finished\")\n",
@@ -298,24 +302,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "c9726b7a-ef2f-4e30-bf27-b026995cebbf",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'props' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m props\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'props' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "props"
+    "# props"
    ]
   },
   {
