--- a/AI/running_chatgpt.ipynb
+++ b/AI/running_chatgpt.ipynb
@@ -279,7 +279,22 @@
       "Scraped 450\n",
       "Scraped 500\n",
       "Scraped 550\n",
-      "Scraped 600\n"
+      "Scraped 600\n",
+      "Scraped 650\n",
+      "Scraped 700\n",
+      "Scraped 750\n",
+      "Scraped 800\n",
+      "Scraped 850\n",
+      "Scraped 900\n",
+      "Scraped 950\n",
+      "Scraped 1000\n",
+      "Scraped 1050\n",
+      "Scraped 1100\n",
+      "Scraped 1150\n",
+      "Scraped 1200\n",
+      "Scraped 1250\n",
+      "Scraped 1300\n",
+      "Scraped 1350\n"
      ]
     }
    ],
@@ -312,9 +327,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ce971880-eddd-41d6-afaa-f3b908170918",
+   "metadata": {},
+   "source": [
+    "# DO NOT CLOSE THE COMPUTER; A SCRIPT IS RUNNING"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac2e2e8e-4937-4d3b-a521-7ed09325cec8",
+   "id": "0ec87ad0-720e-44c0-9ab4-ed199671ebc6",
    "metadata": {},
    "outputs": [],
    "source": []
