--- a/AI/running_chatgpt.ipynb
+++ b/AI/running_chatgpt.ipynb
@@ -294,7 +294,8 @@
       "Scraped 1200\n",
       "Scraped 1250\n",
       "Scraped 1300\n",
-      "Scraped 1350\n"
+      "Scraped 1350\n",
+      "Scraped 1400\n"
      ]
     }
    ],
