finished first scrape

--- a/AI/running_chatgpt.ipynb
+++ b/AI/running_chatgpt.ipynb
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "8ef9fdf7-a011-47b1-80a3-406dd39cff97",
    "metadata": {},
    "outputs": [
@@ -295,7 +295,22 @@
       "Scraped 1250\n",
       "Scraped 1300\n",
       "Scraped 1350\n",
-      "Scraped 1400\n"
+      "Scraped 1400\n",
+      "Scraped 1450\n",
+      "Scraped 1500\n",
+      "Scraped 1550\n",
+      "Scraped 1567; Finished\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'problematic_rows' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 15\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;66;03m# if index > 5 and all(problematic_rows[-5:] == np.arange(index-4,index+1)):\u001b[39;00m\n\u001b[1;32m     13\u001b[0m     \u001b[38;5;66;03m#        break\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mScraped \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(reddit_df)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m; Finished\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLast 5 problematic rows: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mproblematic_rows[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m5\u001b[39m:]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'problematic_rows' is not defined"
      ]
     }
    ],
@@ -319,12 +334,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "id": "6d0e7974-e062-4d37-829a-8dc91b731d3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>lists</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>[-1, -1, 0, -1, -1, 1, -1, -1, 0, -1, -1, -1, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>[-1, 0, 1, -1, 0, 1, -1, 0, -1, -1, 1, -1, -1,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>[1, 0, -1, 1, 1, -1, 1, -1, 0, 0, 1, 0, 0, -1,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>[1, 0, -1, 0, 0, -1, -1, -1, -1, 1, 1, 0, 0, -...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>[1, -1, -1, 0, -1, -1, -1, -1, -1, -1, 1, -1, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1562</th>\n",
+       "      <td>1562</td>\n",
+       "      <td>[-1, -1, 0, -1, -1, 0, -1, 1, -1, 0, -1, -1, 0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1563</th>\n",
+       "      <td>1563</td>\n",
+       "      <td>[1, 1, -1, 1, 0, 0, 0, -1, 1, 0, 1, -1, 1, 1, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1564</th>\n",
+       "      <td>1564</td>\n",
+       "      <td>[0, 1, -1, -1, -1, 0, 1, -1, -1, 0, -1, 1, -1,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1565</th>\n",
+       "      <td>1565</td>\n",
+       "      <td>[-1, -1, -1, -1, -1, -1, -1, -1, -1, 0, 0, 1, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1566</th>\n",
+       "      <td>1566</td>\n",
+       "      <td>[-1, -1, 0, -1, -1, 1, -1, 0, 1, -1, -1, -1, 1...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1567 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0                                              lists\n",
+       "0              0  [-1, -1, 0, -1, -1, 1, -1, -1, 0, -1, -1, -1, ...\n",
+       "1              1  [-1, 0, 1, -1, 0, 1, -1, 0, -1, -1, 1, -1, -1,...\n",
+       "2              2  [1, 0, -1, 1, 1, -1, 1, -1, 0, 0, 1, 0, 0, -1,...\n",
+       "3              3  [1, 0, -1, 0, 0, -1, -1, -1, -1, 1, 1, 0, 0, -...\n",
+       "4              4  [1, -1, -1, 0, -1, -1, -1, -1, -1, -1, 1, -1, ...\n",
+       "...          ...                                                ...\n",
+       "1562        1562  [-1, -1, 0, -1, -1, 0, -1, 1, -1, 0, -1, -1, 0...\n",
+       "1563        1563  [1, 1, -1, 1, 0, 0, 0, -1, 1, 0, 1, -1, 1, 1, ...\n",
+       "1564        1564  [0, 1, -1, -1, -1, 0, 1, -1, -1, 0, -1, 1, -1,...\n",
+       "1565        1565  [-1, -1, -1, -1, -1, -1, -1, -1, -1, 0, 0, 1, ...\n",
+       "1566        1566  [-1, -1, 0, -1, -1, 1, -1, 0, 1, -1, -1, -1, 1...\n",
+       "\n",
+       "[1567 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv('progress.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "id": "c9726b7a-ef2f-4e30-bf27-b026995cebbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[23, 108, 163, 377, 428, 598, 647, 828, 944, 976, 1163]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lists = [eval(x) if type(x) == str else x for x in list(pd.read_csv('progress.csv')['lists'])]\n",
+    "problematic_rows = [i for i in range(len(lists)) if type(lists[i]) != list and np.isnan(lists[i])]\n",
+    "problematic_rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0eca7c4-b469-4dec-a1db-f2d5bafbd26d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# props"
+    "lists = [eval(x) if type(x) == str else x for x in list(pd.read_csv('progress.csv')['lists'])]\n",
+    "problematic_rows = [i for i in range(len(lists)) if type(lists[i]) != list and np.isnan(lists[i])]\n",
+    "for i in problematic_rows:\n",
+    "    try:\n",
+    "        lists[i] = list_analyser(row['all comments'])\n",
+    "    except:\n",
+    "        lists[i] = np.NaN\n",
+    "    pd.DataFrame({'lists': lists}).to_csv('progress.csv')\n",
+    "print(f\"Scraped {len(problematic_rows)}; Finished\")"
    ]
   },
   {
