--- a/AI/running_chatgpt.ipynb
+++ b/AI/running_chatgpt.ipynb
@@ -475,10 +475,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "d0eca7c4-b469-4dec-a1db-f2d5bafbd26d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scraped 11; Finished\n"
+     ]
+    }
+   ],
    "source": [
     "lists = [eval(x) if type(x) == str else x for x in list(pd.read_csv('progress.csv')['lists'])]\n",
     "problematic_rows = [i for i in range(len(lists)) if type(lists[i]) != list and np.isnan(lists[i])]\n",
