--- a/exploring/viz_3.ipynb
+++ b/exploring/viz_3.ipynb
@@ -2746,7 +2746,7 @@
    ],
    "source": [
     "print(temp_df_neutrals[np.abs(temp_df_neutrals['scores'])<=5]['mean_fans_comments'].mean())\n",
-    "print(temp_df_neutrals[np.abs(temp_df_neutrals['scores'])<=10]['mean_fans_comments'].mean())\n",
+    "print(temp_df_neutrals[np.abs(temp0_df_neutrals['scores'])<=10]['mean_fans_comments'].mean())\n",
     "print(temp_df_neutrals[np.abs(temp_df_neutrals['scores'])<=15]['mean_fans_comments'].mean())\n",
     "print(temp_df_neutrals[np.abs(temp_df_neutrals['scores'])<=20]['mean_fans_comments'].mean())\n",
     "print(temp_df_neutrals[np.abs(temp_df_neutrals['scores'])<=25]['mean_fans_comments'].mean())"
